[mkdocs] fix: Java: move try/catch to main